Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-23504

Coverity analysis defect 98177: Resource leak

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Leak of memory or pointers to system resources

      Defect 98177 (STATIC_C)
      Checker RESOURCE_LEAK (subcategory none)
      File: /src/third_party/wiredtiger/src/cursor/cur_backup.c
      Function __backup_list_uri_append
      /src/third_party/wiredtiger/src/cursor/cur_backup.c, line: 475
      Resource "value" is not freed or pointed-to in "__wt_fprintf".

          	WT_RET(__wt_fprintf(cb->bfp, "%s\n%s\n", name, value));
      

      /src/third_party/wiredtiger/src/cursor/cur_backup.c, line: 475
      Variable "value" going out of scope leaks the storage it points to.

          	WT_RET(__wt_fprintf(cb->bfp, "%s\n%s\n", name, value));
      

            Assignee:
            keith.bostic@mongodb.com Keith Bostic (Inactive)
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:
              None
              None
              None
              None