Import wiredtiger-wiredtiger-2.8.0-201-g7ea2631.tar.gz from wiredtiger branch mongodb-3.2

ref: 43e885a..7ea2631

SERVER-23504  Coverity analysis defect 98177: Resource leak
SERVER-23526  Replication relies on storage engines reporting a non-zero size for correctness
SERVER-23588  mongod with WiredTiger won't start on Windows when built with --dbg=on --opt=off
SERVER-23682  WiredTiger changes for MongoDB 3.2.6
WT-2330       in-memory configurations should not create on-disk collection files
WT-2507       Add upgrading documentation in preparation for 2.8 release.
WT-2512       wtperf: MSVC complains about float conversion in throttle code
WT-2513       conversion from 'int64_t' to 'uint32_t'
WT-2517       wtperf uses setvbuf in a way that isn't supported on Windows
WT-2522       Incorrect format code in message
WT-2525       in-memory configurations: miscellaneous cleanups
WT-2527       OS X compile error, missing POSIX_FADV_WILLNEED #define
WT-2528       style error in WiredTiger build
WT-2529       The readonly test case is crashing with a stack overflow
WT-2531       in-memory tables are allocating unnecessary memory
WT-2532       WT_STREAM_APPEND and WT_STREAM_LINE_BUFFER flag overlap
WT-2533       Ensure that in-memory tables don't report a zero size
WT-2534       Invalid transaction snapshots on PowerPC