src/third_party/wiredtiger/src/log/log_slot.c
@@ -96,15 +96,13 @@ retry:
 	slot->slot_end_lsn = slot->slot_start_lsn;
 	end_offset =
 	    WT_LOG_SLOT_JOINED_BUFFERED(old_state) + slot->slot_unbuffered;
-	slot->slot_end_lsn.l.offset += end_offset;
-	WT_STAT_FAST_CONN_INCRV(session,
-	    log_slot_consolidated, end_offset);
+	slot->slot_end_lsn.l.offset += (uint32_t)end_offset;
+	WT_STAT_FAST_CONN_INCRV(session, log_slot_consolidated, end_offset);
 	/*
 	 * XXX Would like to change so one piece of code advances the LSN.
 	 */
 	log->alloc_lsn = slot->slot_end_lsn;
-	WT_ASSERT(session,
-	    log->alloc_lsn.l.file >= log->write_lsn.l.file);
+	WT_ASSERT(session, log->alloc_lsn.l.file >= log->write_lsn.l.file);
 	return (0);
 }
 
