src/third_party/wiredtiger/src/meta/meta_table.c
@@ -290,6 +290,10 @@ __wt_metadata_search(WT_SESSION_IMPL *session, const char *key, char **valuep)
 
 	WT_ERR(cursor->get_value(cursor, &value));
 	WT_ERR(__wt_strdup(session, value, valuep));
+
 err:	WT_TRET(__wt_metadata_cursor_release(session, &cursor));
+
+	if (ret != 0)
+		__wt_free(session, *valuep);
 	return (ret);
 }
